--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Setup node 12
         uses: actions/setup-node@v2
         with:
-          node-version: 12
+          node-version: '12'
       run: |
         npm i 
         npm run build 
