--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -8,16 +8,21 @@ on:
       - pipeline-test
 #      - releases/*
 
+    strategy:
+      matrix:
+        node-version: [8.x, 10.x, 12.x]
       
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Setup node 12
-        uses: actions/setup-node@v2
-        with:
-          node-version: '12'
+    - uses: actions/checkout@v2
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v1
+      with:
+        node-version: ${{ matrix.node-version }}
+    - name: npm install and test
       run: |
-        npm i 
+        npm install
         npm run build 
+
